--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.ambi.formula.gui.swing</groupId>
-    <artifactId>Formula_SwingApplication</artifactId>
-    <version>5.0-SNAPSHOT</version>
+    <artifactId>Formula_Swing</artifactId>
+    <version>1.0</version>
     <name>Formula Swing Application</name>
     <packaging>jar</packaging>
     <properties>
@@ -17,6 +17,11 @@
             <artifactId>Formula_Data_Model</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.ambroz.formula.datamodel</groupId>
+            <artifactId>Formula_Model</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -25,7 +30,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.ambi.formula.gui.swing.GameWindow</mainClass>
+                            <mainClass>com.ambroz.formula.gui.swing.ApplicationWindow</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
